CHANGELOG 
$Id: CHANGELOG.txt,v 1.4 2005/05/01 01:11:25 k4st Exp $

30/04/2005 - added reply adding and previewing (replies.class.php)
30/04/2005 - added reply adding (newreply.php)
25/04/2005 - added delete topic class (topics.class.php)
25/04/2005 - added edit topic class (topics.class.php)
23/04/2005 - added remove draft class (topics.class.php)
23/04/2005 - updated the bbcode parser (bbcode.php)
23/04/2005 - added post preview support for topics (topics.class.php)
23/04/2005 - moved all of the buttons into the 'english' folder under language (Images)
22/04/2005 - changed the way the bbcode parser looks at most things (bbcode.php)