@@ -1,5 +1,7 @@
 TODO:
 
+- Make the Heirarchy::moveUp() work properly
+- ** add moderating log when a user deletes a reply
 - ** make globals, stickies and announcements work.
 - ** make it avaiable for a user to lock a topic
 - ** add a moderating note when someone deletes a topic/reply
