@@ -1,0 +1,54 @@
+<?php
+/**
+* k4 Bulletin Board, blogs.php
+*
+* Copyright (c) 2005, Peter Goodman
+*
+* Permission is hereby granted, free of charge, to any person obtaining
+* a copy of this software and associated documentation files (the
+* "Software"), to deal in the Software without restriction, including
+* without limitation the rights to use, copy, modify, merge, publish,
+* distribute, sublicense, and/or sell copies of the Software, and to
+* permit persons to whom the Software is furnished to do so, subject to
+* the following conditions:
+*
+* The above copyright notice and this permission notice shall be
+* included in all copies or substantial portions of the Software.
+*
+* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+* EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+* MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+* NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
+* BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
+* ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+* CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+* SOFTWARE.
+*
+* @author James Logsdon
+* @author Peter Goodman
+* @version $Id: blogs.php,v 1.1 2005/05/03 22:12:24 k4st Exp $
+* @package k42
+*/
+
+error_reporting(E_ALL);
+
+require 'forum.inc.php';
+
+class DefaultEvent extends Event {
+	function Execute(&$template, $request, &$dba, &$session, &$user) {
+		
+		global $_DATASTORE, $_USERGROUPS;
+		
+		/* Set the breadcrumbs bit */
+		$template		= BreadCrumbs($template, $template->getVar('L_BLOGS'));
+				
+				
+		return TRUE;
+	}
+}
+
+$app = new Forum_Controller('blog_base.html');
+
+$app->ExecutePage();
+
+?>
